[project]
name = "lg-portfolio-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
